Fixed the language changes

--- a/store/templates/accounts/login.html
+++ b/store/templates/accounts/login.html
@@ -43,7 +43,7 @@
                         </div>
 
                         {% for message in messages %}
-                            <p id="messages">{{ message }}</p>
+                            <p id="messages">{% trans message %}</p>
                         {% endfor %}
 
                         <div class="mt-4">
