--- a/store/templates/accounts/password_reset_complete.html
+++ b/store/templates/accounts/password_reset_complete.html
@@ -14,7 +14,7 @@
                <div class="d-flex justify-content-center form_container">
                    <div style="width: 100%; text-align: center;">
                         <div style="width: 100%; text-align: center; margin-bottom: 2em;">
-                            <h3 id="form-title">{% trans 'Password reset Complete' %}</h3>
+                            <h3 id="form-title">{% trans 'Password reset complete' %}</h3>
                         </div>
                         <div style="width: 100%; text-align: center;">
                             <p style="margin-bottom: 0;">{% trans 'Your password has been successfully changed.' %}</p>
