--- a/store/templates/accounts/register.html
+++ b/store/templates/accounts/register.html
@@ -4,7 +4,7 @@
 <html>
     <head>
 
-        <title>{% trans "Login" %}</title>
+        <title>{% trans "Register" %}</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -70,7 +70,7 @@
 
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
-                            {% trans 'Already have an account?' %}<a href="{% url 'login' %}" class="m1-2">{% trans 'Login' %}</a>
+                            {% trans 'Already have an account?' %}<a href="{% url 'login' %}" class="m1-2">{% trans 'Log in' %}</a>
                         </div>
                     </div>
                 </div>
