--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,6 +1,7 @@
 {% extends 'store/main.html'%}
 {% load i18n %}
 {% load static %}
+{% load multiply %}
 {% block content%}
     <div class="row">
         <div class="col-lg-6">
@@ -53,6 +54,7 @@
                 <div id="paypal-button-container"></div>
             </div>
         </div>
+
         <div class="col-lg-6">
             <div class="box-element"> 
                 <a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; {% trans 'Back to cart'%}</a>
@@ -60,15 +62,18 @@
                 <h3>{% trans 'Order Summary'%}</h3>
                 <hr>
                 {% for item in items %}
-                <div class="cart-row">
-    				<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
-    				<div style="flex:2"><p>{{item.product.name}}</p></div>
-    				<div style="flex:1"><p>{{item.product.price}}BGN</p></div>
-    				<div style="flex:1"><p>{{item.quantity}}</p></div>
-    			</div>
+                <div class="cart-row" style="display: grid; grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 5fr; grid-gap: 10px;">
+                    <div><img class="row-image" src="{{item.product.imageURL}}"></div>
+                    <div><p>{{item.product.name}}</p></div>
+                    <div><p>{{item.quantity}}</p></div>
+                    <div><p>x</p></div>
+                    <div><p>{{item.product.price}} BGN</p></div>
+                    <div><p>=</p></div>
+                    <div><p><strong>{{ item.product.price|multiply:item.quantity|floatformat:2 }} BGN</strong></p></div>
+                </div>
                 {% endfor %}
-                <h5>{% trans 'Items: '%}{{order.get_cart_items}}</h5>
-                <h5>{% trans 'Total: '%}{{order.get_cart_total|floatformat:2}}BGN</h5>
+                <h5>{% trans 'Items: '%} <strong>{{order.get_cart_items}}</strong></h5>
+                <h5>{% trans 'Total: '%} <strong>{{order.get_cart_total|floatformat:2}} BGN</strong></h5>
             <div>
         </div>
     </div>
