--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -144,7 +144,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<p class="text-center">
-							&copy; {% now "Y" %} Shooztars. All rights reserved.
+							&copy; {% now "Y" %} {% trans "Shooztars. All rights reserved." %}
 						</p>
 					</div>
 				</div>
