--- a/staticfiles/css/Reg_Log.css
+++ b/staticfiles/css/Reg_Log.css
@@ -78,7 +78,7 @@ html {
 
 .password-reset-message {
     padding: 2em;
-    background-color: #000000;
+    background-color: #02c4f4;
     border-radius: 1em;
     box-shadow: 0 0.5em 1em 0 rgba(0, 0, 0, 0.1);
     max-width: 600px;
