--- a/store/templates/accounts/login.html
+++ b/store/templates/accounts/login.html
@@ -43,7 +43,7 @@
                         </div>
                         
                         {% for message in messages %}
-                        <p id="messages">{{messages}}</p>
+                        <p id="messages">{{message}}</p>
                         {% endfor %}
 
                         <div class="mt-4">
